# dynatac

./: Cargo.toml  Makefile  README.md  kernel.img  kernel8.img  link.x  miniterm.rb
asm/: boot.s
src/: boot.rs  display.rs  epd.rs  epdisplay.rs  exception.rs  exception.s  gpio.rs  interupts.rs  lib.rs  locks.rs  main.rs  mmio.rs  mutex.rs  state.rs  uart.rs  utils.rs
src/interupts/: gic.rs  gicc.rs  null_irq_manager.rs
src/locks/: init_state_rw.rs  irq_safe_mutex.rs
