[package]
name = "dynatac"
version = "0.1.0"
edition = "2021"

[dependencies]
# spin = "0.9.8"
aarch64-cpu = { version = "9.x.x" }
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"] }

# [dependencies.lazy_static]
# version = "=1.4.0"
# features = ["spin_no_std"]

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"
